# OpenMLR

./: .dockerignore  .env.example  .gitignore  .open-mlr.config.json  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile.dev  Makefile  README.md  app.json  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  qodana-backend.yaml  qodana-frontend.yaml  qodana.yaml  render.yaml  tsconfig.json
.github/workflows/: docs.yml  qodana_code_quality.yml  test.yml
.opencode/plans/: compute-nodes.md
.qodana-reports/: report-1.json
backend/: alembic.ini  benchmark_small_models.py  pyproject.toml
backend/configs/: agent_config.yaml
backend/configs/prompts/: system_prompt.yaml
backend/openmlr/: __init__.py  app.py  celery_app.py  config.py  dependencies.py  main.py  models.py
backend/openmlr/agent/: context.py  doom_loop.py  llm.py  loop.py  prompts.py  session.py  types.py
backend/openmlr/auth/: router.py  security.py
backend/openmlr/compute/: __init__.py  capabilities.py  manager.py  probe.py  workspace.py
backend/openmlr/db/: create_tables.py  engine.py  models.py  operations.py
backend/openmlr/db/migrations/: env.py
backend/openmlr/db/migrations/versions/: 004_add_projects.py
backend/openmlr/keys/: __init__.py  manager.py
backend/openmlr/routes/: agent.py  compute.py  health.py  keys.py  mcp.py  projects.py  settings.py  terminal.py
backend/openmlr/sandbox/: interface.py  local.py  manager.py  modal_sandbox.py  singularity.py  ssh.py
backend/openmlr/services/: event_bus.py  job_manager.py  redis_pubsub.py  session_manager.py
backend/openmlr/tasks/: __init__.py  agent_tasks.py  compute_tasks.py  process_tasks.py
backend/openmlr/tools/: ask_user.py  compute_tools.py  github.py  http_utils.py  huggingface.py  inspect.py  local.py  mcp.py  memory_tool.py  papers.py  plan.py  process_tool.py  registry.py  research.py  sandbox_tools.py  search.py  session_search.py  workspace_tools.py  writing.py
backend/openmlr/workspace/: __init__.py  knowledge.py  persistence.py
backend/tests/: conftest.py  test_agent_loop.py  test_app.py  test_auth.py  test_auth_routes.py  test_celery_app.py  test_compute.py  test_config.py  test_context.py  test_conversations.py  test_db_engine.py  test_db_operations.py  test_dependencies.py  test_doom_loop.py  test_event_bus.py  test_hermes_features.py  test_inspect.py  test_job_manager.py  test_llm.py  test_models.py  test_models_orm.py  test_projects.py  test_prompts.py  test_redis_pubsub.py  test_routes_health.py  test_routes_settings.py  test_sandbox_manager.py  test_sandbox_types.py  test_session.py  test_session_manager.py  test_tool_registry.py  test_tools_github.py  test_tools_huggingface.py  test_tools_local.py  test_tools_mcp.py  test_tools_papers.py  test_tools_research.py  test_tools_sandbox.py  test_tools_search.py  test_tools_workspace.py  (+3 more)
frontend/: eslint.config.js  index.html  package.json  vite.config.ts
frontend/public/: manifest.json
frontend/src/: App.tsx  api.ts  index.css  types.ts  version.ts  vite-env.d.ts
frontend/src/__tests__/: AgentSettings.test.tsx  ApprovalModal.test.tsx  AuthGuard.test.tsx  ConfirmDialog.test.tsx  EditorPanel.test.tsx  FileTree.test.tsx  InputArea.test.tsx  LoginPage.test.tsx  MessageList.test.tsx  ModelModal.test.tsx  OnboardingModal.test.tsx  ProjectSelector.test.tsx  ProvidersSettings.test.tsx  QuestionDrawer.test.tsx  ReportDrawer.test.tsx  RightPanel.test.tsx  SandboxSettings.test.tsx  SettingsPage.test.tsx  SettingsPanel.test.tsx  Sidebar.test.tsx  TodoReviewDrawer.test.tsx  WritingSettings.test.tsx  api.test.ts  setup.ts  useJobStatus.test.ts  useSSE.test.ts
frontend/src/components/: ApprovalModal.tsx  AuthGuard.tsx  CollapsiblePanel.tsx  ComputeSelector.tsx  ConfirmDialog.tsx  EditorPanel.tsx  FileTree.tsx  ImageViewer.tsx  InputArea.tsx  LandingPage.tsx  LoginPage.tsx  MentionPopover.tsx  MessageList.tsx  ModelModal.tsx  OnboardingModal.tsx  ProjectManageModal.tsx  ProjectModal.tsx  ProjectSelector.tsx  QuestionDrawer.tsx  ReportDrawer.tsx  RightPanel.tsx  SettingsPage.tsx  SettingsPanel.tsx  Sidebar.tsx  Terminal.tsx  TodoReviewDrawer.tsx
frontend/src/hooks/: useJobStatus.ts  useSSE.ts
site/: package-lock.json  package.json
site/docs/: agent-harness.md  api.md  architecture.md  changelog.md  compute.md  configuration.md  index.md  modes.md  projects.md  quickstart.md  setup.md  tools.md
site/docs/.vitepress/: config.ts
site/docs/public/: llms.txt  (+1 more)
src/: project-config.ts  server.ts
src/agent/: config.ts  context.ts  index.ts  llm.ts  loop.ts  prompts.ts  session.ts  types.ts
(+17 files in other folders)
