[project]
name = "openmlr"
version = "0.2.0"
description = "OpenMLR — an ML research intern that reads papers, trains models, and ships code"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Anubhav Singh" }]

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sse-starlette>=2.0.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",

    # Auth
    "bcrypt>=4.0.0",
    "python-jose[cryptography]>=3.3.0",

    # LLM providers
    "openai>=1.0.0",
    "anthropic>=0.34.0",
    "litellm>=1.50.0",

    # HTTP / scraping
    "httpx>=0.28.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",

    # Config / templating
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",

    # Background jobs
    "celery>=5.4.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
sandbox = [
    "paramiko>=3.5.0",
    "modal-client>=0.65.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["openmlr"]

[project.scripts]
openmlr = "openmlr.main:main"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.28.0",
]

[tool.coverage.run]
source = ["openmlr"]
omit = ["openmlr/db/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
