[project]
name = "openmlr"
version = "0.5.0"
description = "OpenMLR — an ML research intern that reads papers, trains models, and ships code"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Anubhav Singh" }]

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sse-starlette>=2.0.0",
    "python-multipart>=0.0.18",

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",

    # Auth
    "bcrypt>=4.0.0",
    "python-jose[cryptography]>=3.3.0",

    # LLM providers
    "openai>=1.0.0",
    "anthropic>=0.34.0",
    "tiktoken>=0.7.0",
    "litellm>=1.50.0",

    # HTTP / scraping
    "httpx>=0.28.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",

    # Config / templating
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",

    # Knowledge graph (workspace persistence)
    "networkx>=3.0",

    # Background jobs
    "celery>=5.4.0",
    "redis>=5.0.0",

    # MCP (Model Context Protocol)
    "fastmcp>=2.0.0",
]

[project.optional-dependencies]
sandbox = [
    "paramiko>=3.5.0",
    "modal-client>=0.65.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["openmlr"]

[project.scripts]
openmlr = "openmlr.main:main"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "pre-commit>=4.0.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "**/migrations/**",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E402",   # module level import not at top (needed for tests with pytestmark)
    "E712",   # comparison to True/False (sometimes clearer in SQLAlchemy)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise from err (too noisy for now)
    "B007",   # loop control variable not used (intentional in some cases)
    "B017",   # assert blind exception (ok in tests)
    "UP042",  # StrEnum (requires Python 3.11+ consideration)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F841"]  # unused variables ok in tests

[tool.ruff.lint.isort]
known-first-party = ["openmlr"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["openmlr"]
omit = ["openmlr/db/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
